# Object_detection_2D-LiDAR

./: CMakeLists.txt  README.md  package.xml
launch/: multi_object_detector.launch  object_detection.launch
scripts/: data_collection_node.py  multi_object_detector_node.py  object_detection_node.py  object_detection_with_slam.py
src/: object_detection_node.py
