  GNU nano 4.8                                                                        package.xml                                                                                   <?xml version="1.0"?>
<package format="2">
  <name>object_detection_2</name>
  <version>0.0.0</version>
  <description>The object_detection_2 package</description>

  <!-- Maintainer and license info -->
  <maintainer email="aiot@todo.todo">aiot</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Uncomment and fill in if you have a URL -->
  <!-- <url type="website">http://wiki.ros.org/object_detection_2</url> -->

  <!-- Uncomment and fill in if you have authors -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
</package>
